--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2,3 +2,8 @@ body {
     min-height: 2000px;
     padding-top: 70px;
 }
+/* get all the text the same size */
+.jumbotron ul, ol {
+    font-size: 21px;
+    font-weight: 200;
+}
